fix tamaño icono de cambio de idioma en vista móvil + imagnes no visibles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -991,13 +991,16 @@ h4{
 
   .navbar-link { --fs-8: 14px; }
 
+  .selector_idioma_navbar{
+    background-color: aqua;
+  }
+  }
   .changeidioma {
-    height: 20px;
-    width: 35px;
-    margin-right: 8px;
-    margin-left: 17px;
+    width: 30px;
+    height: 19px;
     transition: transform 0.3s ease, box-shadow 0.3s ease, filter 0.3s ease;
     cursor: pointer;
+    margin-left: 5px;
   }
   
   .changeidioma:hover {
@@ -1124,11 +1127,6 @@ h4{
   }
 
   .clients-item { min-width: calc(33.33% - 35px); }
-
-  .changeidioma{
-    height: 20px;
-    width: 35px;
-  }
   
   /**
    * #RESUME
@@ -1221,11 +1219,6 @@ h4{
    */
 
   .navbar-link { --fs-8: 15px; }
-  .changeidioma{
-    height: 16px;
-    width: 28px;
-    margin: 5px;
-  }
 
 
   /**
@@ -1359,12 +1352,6 @@ h4{
   }
 
   .navbar-link { font-weight: var(--fw-500); }
-  .changeidioma{
-    height: 16px;
-    width: 28px;
-    margin: 5px;
-  }
-
 
   /**
    * ABOUT
@@ -1402,8 +1389,6 @@ h4{
   .blog-banner-box { height: 230px; }
 
 }
-
-
 
 /**
  * responsive larger than 1250px screen
